--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.scss
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.scss
@@ -25,7 +25,7 @@ a {
 
 /* Layout */
 .wrapper {
-    padding: 102px;
+    padding: 0px 102px;
 }
 
 /* Texto */
@@ -54,12 +54,50 @@ a {
 .cm-text-700 {
     font-weight: 600;
 }
+
+.section-title{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+}
 /* Header */
 .header{
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
     padding: 24px 40px;
+    .profile{
+        display: flex;
+        background-color: $cm-white;
+        border-radius: 90px;
+        align-items: center;
+        padding-right: 16px;
+        h4{
+            margin-bottom: 0;
+            font-size: 20px;
+        }
+        .profile-img{
+            background-color: $cm-black;
+            border-radius: 100%;
+            padding: 8px 7px;
+            color: $cm-gray--500;
+            display: flex;
+            align-items: center;
+            font-size: 15px;
+        }
+        .dropdown-toggle{
+            color: $cm-black;
+            font-weight: 600;
+            &::after {
+                display: none;
+            }
+            i{
+                margin-left: 15px;
+                color: $cm-gray--300;
+            }
+        }
+    }
 }
 
 /* Logo */
@@ -78,56 +116,6 @@ a {
     }
 }
 
-/* Forms */
-form {
-    .form-label {
-        font-weight: bold;
-        margin-bottom: 12px;
-    }
-
-    .form-control {
-        border-radius: $cm-border--radius;
-        font-size: inherit;
-        line-height: 12px;
-        padding: 10px 15px;
-        margin-bottom: 30px;
-        background-color: $cm-gray--100;
-        border-color: $cm-gray--100;
-        color: $cm-gray--300;
-        &:focus {
-            color: #212529; 
-            background-color: #fff;
-            border-color: $cm-primary;
-            outline: 0;
-            box-shadow: 0 0 0 0.25rem rgba(13, 253, 141, 0.25);
-        }
-        &::placeholder{
-            color: $cm-gray--300; 
-        }
-    }
-    .form-check {
-        padding-left: 30px;
-        .form-check-input[type="checkbox"] {
-            margin-top: 1px;
-            margin-right: 15px;
-            border-radius: 0.15rem;
-            border: 3px solid $cm-gray--300;
-        }
-        .form-check-input:checked {
-            background-color: $cm-primary;
-        }
-        .form-check-input:checked {
-            background-color: $cm-primary;
-        }
-
-        .form-check-input:focus {
-            border-color: $cm-primary;
-            outline: 0;
-            box-shadow: 0 0 0 0.25rem rgba(13, 253, 141, 0.25);
-        }
-    }
-}
-
 /* Botones */
 .btn {
     border-radius: $cm-border--radius;
@@ -139,5 +127,24 @@ form {
 .btn-primary {
     background-color: $cm-primary;
     border-color: $cm-primary;
+}
+
+.btn-outline-secondary{
+    height: 40px;
+    font-size: 15px;
+    border-radius: 8px;
+    padding: 5px 14px 5px 10px !important;
+    color: $cm-black;
+    background-color: $cm-white;
+    border: 1px solid #E6E6EA;
+    i{
+        margin-right: 12px;
+        font-size: 19px;
+    }
+    &:hover {
+        color: #fff;
+        background-color: #6c757d;
+        border-color: #6c757d;
+    }
 }
 
