--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.css
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.css
@@ -62,6 +62,12 @@ a {
   line-height: 21px;
 }
 
+.num {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500 !important;
+  letter-spacing: 0.02rem;
+}
+
 /* Header */
 .header {
   display: flex;
