--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.scss
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.scss
@@ -60,6 +60,12 @@ a {
     font-size: 18px;
     line-height: 21px;
 }
+
+.num{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500 !important;
+    letter-spacing: 0.02rem;
+}
 /* Header */
 .header{
     display: flex;
