--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/dashboard.scss
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/dashboard.scss
@@ -18,10 +18,32 @@
             .section-title {
                 margin-bottom: 28px;
             }
-            i{
+            i {
                 width: fit-content;
                 color: $cm-primary;
                 font-size: 16px;
+            }
+            .filters {
+                .tag-list {
+                    span {
+                        display: inline-block;
+                        background-color: $cm-gray--200;
+                        color: $cm-black;
+                        text-transform: uppercase;
+                        font-size: 12px;
+                        font-weight: 600;
+                        padding: 5px 12px 4px;
+                        margin-right: 6px;
+                        margin-bottom: 7px;
+                        border-radius: 20px;
+                        svg{
+                            width: 12px;
+                            margin-left: 8px;
+                            vertical-align: text-bottom;
+                            color: $cm-gray--300;
+                        }
+                    }
+                }
             }
         }
     }
@@ -56,14 +78,14 @@
     border-color: $cm-gray--100;
     color: $cm-gray--300;
     &:focus {
-        color: #212529; 
+        color: #212529;
         background-color: #fff;
         border-color: $cm-primary;
         outline: 0;
         box-shadow: 0 0 0 0.25rem rgba(13, 253, 141, 0.25);
     }
-    &::placeholder{
-        color: $cm-gray--300; 
+    &::placeholder {
+        color: $cm-gray--300;
     }
 }
 
@@ -71,7 +93,7 @@
     position: relative;
     i {
         position: absolute;
-        top: 13px;
+        top: 10px;
         left: 16px;
     }
     .form-control {
@@ -103,7 +125,8 @@
     font-size: inherit;
     background-color: $cm-gray--100;
     border-color: $cm-gray--100;
-    color: $cm-gray--400;
+    color: $cm-black;
+    font-weight: 500;
     &:focus {
         color: #212529;
         background-color: #fff;
@@ -112,7 +135,12 @@
         box-shadow: none;
     }
     &::placeholder {
-        color: $cm-gray--300;
+        color: $cm-black;
+        font-weight: 500;
+    }
+    option {
+        max-width: 100%;
+        font-weight: 500;
     }
 }
 
@@ -168,13 +196,13 @@
         font-weight: 600;
         padding: 20px 24px;
     }
-    .tags{
-        span{
+    .tags {
+        span {
             background-color: $cm-primary;
             color: $cm-white;
             text-transform: uppercase;
             font-size: 12px;
-            padding: 5px 8px 4px;        
+            padding: 5px 8px 4px;
             margin-right: 6px;
             border-radius: 6px;
         }
