--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.scss
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/assets/styles/scss/main.scss
@@ -81,12 +81,13 @@ a {
         padding-right: 16px;
         h4{
             margin-bottom: 0;
-            font-size: 20px;
+            font-size: 16px;
+            font-weight: 700;
         }
         .profile-img{
             background-color: $cm-black;
             border-radius: 100%;
-            padding: 8px 7px;
+            padding: 11px 9px;
             color: $cm-gray--500;
             display: flex;
             align-items: center;
@@ -115,10 +116,7 @@ a {
         line-height: 34px;
     }
     span {
-        margin-left: 5px;
-        padding-left: 5px;
         font-weight: 800;
-        border-left: 5px solid $cm-primary;
     }
 }
 
@@ -142,15 +140,16 @@ a {
     padding: 5px 14px 5px 10px !important;
     color: $cm-black;
     background-color: $cm-white;
-    border: 1px solid #E6E6EA;
+    border: 1px solid $cm-gray--200;
     i{
         margin-right: 12px;
         font-size: 19px;
     }
-    &:hover {
-        color: #fff;
-        background-color: #6c757d;
-        border-color: #6c757d;
+    &:hover, &:active, &:focus {
+        color: $cm-black;
+        background-color: $cm-gray--200;
+        border-color:$cm-gray--200;
+        box-shadow: none !important;
     }
 }
 
