--- a/toniSalvadoRubio_FirstCommit_Ejercicio7_FCFrontend/assets/styles/scss/candidateForm.scss
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio7_FCFrontend/assets/styles/scss/candidateForm.scss
@@ -26,13 +26,13 @@
             line-height: 28px;
         }
 
-        .profile-location{
+        .profile-location {
             display: flex;
             flex-flow: row;
             color: $cm-gray--300;
-            i{
+            i {
                 vertical-align: baseline;
-                -webkit-text-stroke: 0px ;
+                -webkit-text-stroke: 0px;
                 font-size: 15px;
             }
             h2 {
@@ -45,17 +45,17 @@
             }
         }
     }
-    form{
+    form {
         margin-top: 48px;
-        .btn-secondary{
+        .btn-secondary {
             margin-right: 10px;
         }
-        .btn-outline-secondary{
-            i{
+        .btn-outline-secondary {
+            i {
                 font-size: 16px;
             }
         }
-        .tags{
+        .tags {
             margin-bottom: 15px;
         }
     }
@@ -89,7 +89,7 @@
     }
     &::placeholder {
         color: $cm-black;
-            font-weight: 500;
+        font-weight: 500;
     }
 }
 
@@ -175,7 +175,10 @@
 }
 
 /*Tag list*/
-.tag-list {
+/* .tags {
+    .form-label{
+        display: block;
+    }
     span {
         display: inline-block;
         background-color: $cm-gray--200;
@@ -187,11 +190,84 @@
         margin-right: 6px;
         margin-bottom: 7px;
         border-radius: 20px;
-        svg{
+        svg {
             width: 12px;
             margin-left: 8px;
             vertical-align: text-bottom;
             color: $cm-gray--300;
+        }
+    }
+} */
+
+/* Token autocomplete */
+.token-autocomplete-container {
+    width: 100%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    .token-item{
+        order: 2;
+        background-color: $cm-gray--200;
+        color: $cm-black;
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: 700;
+        padding: 3px 12px 4px;
+        margin-right: 6px;
+        margin-bottom: 7px;
+        border-radius: 20px;
+        .token-autocomplete-token-delete {
+            cursor: pointer;
+            color: #A5A8B3;
+            font-size: 23px;
+            margin-left: 6px;
+            vertical-align: text-bottom;
+            pointer-events: auto;
+            font-weight: 100;
+        }
+    }
+    .token-autocomplete-input {
+        text-transform: initial;
+        display: block;
+        order: 1;
+        width: 100%;
+        border-radius: $cm-border--radius;
+        font-size: inherit;
+        line-height: 12px;
+        padding: 14px 0px 14px 15px;
+        margin-bottom: 15px;
+        background-color: $cm-gray--100;
+        border-color: $cm-gray--100;
+        color: $cm-black;
+        font-weight: 500;
+        &:empty {
+            &::before {
+                content: attr(data-placeholder);
+                color: rgba(0, 0, 0, 0.281);
+            }
+        }
+        &:focus-visible{
+            outline-color: $cm-primary;
+        }    }
+    .token-autocomplete-suggestions {
+        display: none;
+        width: 100%;
+        list-style-type: none;
+        padding: 0px;
+        order: 1;
+        margin-top: -25 px;
+        margin-bottom: 12px;
+        li {
+            width: 100%;
+            padding: 8px;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+        .token-autocomplete-suggestion-active {
+            color: #747474;
+            background-color: #fdfdfd;
+        }
+        .token-autocomplete-suggestion-highlighted {
+            background-color: $cm-primary;
         }
     }
 }
