--- a/toniSalvadoRubio_FirstCommit_Ejercicio2_FCFrontend/assets/styles/scss/home.scss
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio2_FCFrontend/assets/styles/scss/home.scss
@@ -21,9 +21,15 @@
         display: flex;
         flex-flow: column;
         overflow-y: scroll;
-        flex-basis: 40%;
+        flex-basis: 32%;
         &::-webkit-scrollbar {
             display: none;
+        }
+        /* Medium devices (portatil, 1300) */
+        @media only screen and (max-width: 1300px) {
+            flex-basis: 40%;
+            display: flex;
+            flex-flow: column;
         }
         /* Medium devices (landscape tablets, 768px and up) */
         @media only screen and (max-width: 1024px) {
